fix download of proofs
